--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
+<!DOCTYPE html>
 <html>
 	<head>
-	<title>podział</title>
+	<title>Ćw.5/76 zapasowe</title>
 	<meta charset="utf-8">
 	<style>
 	article
 	{
-	width:1200px;
-    height:700px;
 	border:3px solid black;
 	padding:10px;
 	font-family:arial;
@@ -14,7 +13,7 @@
 	header
 	{
 	height:18%;
-	width:98.5%;
+	width:99.5%;
 	text-align:center;
 	border:3px solid black;
 	line-height:6.5;
@@ -22,8 +21,8 @@
 	section
 	{
 	height:60%;
-	width:65%;
-	margin-right:10px;
+	width:64%;
+	margin-right:27px;
 	margin-top:10px;
 	margin-bottom:10px;
 	border:3px solid black;
@@ -31,8 +30,8 @@
 	}
 	aside
 	{
-	height:56.5%;
-	width:30%;
+	height:58%;
+	width:32.5%;
 	float:left;
 	border:3px solid black;
 	margin-top:10px;
@@ -43,7 +42,7 @@
 	footer
 	{
 	height:15%;
-	width:98.5%;
+	width:99.5%;
 	text-align:center;
 	clear:both;
 	border:3px solid black;
@@ -59,8 +58,10 @@
 		<article>
 		<header><b>STRONA INTERNETOWA SZKOŁY</header></b>
 		<section>
-		<div style="height:93%;width:32%;float:left;text-align:center;border:3px solid black;margin:8px;padding-left:10px;"><h1>WAŻNE LINKI:</h1><br><h1 align="left">www.men.gov.pl<br>www.ore.gov.pl<br>www.wsip.pl<br>www.dobraszkoła.pl</h1></div>
-		<div style="height:93%;width:57%;float:left;text-align:center;border:3px solid black;margin:8px;padding-left:10px;"><h1>O NAS:</h1><br><h1 align="left">Nasza szkoła jest najlepsza,<br>najładniejsza i najlepiej położona</div></h1>
+		<div style="height:88%;width:34%;float:left;text-align:center;border:3px solid black;margin:8px;margin:20px;margin-right:0px;padding:10px;">
+			<h1>WAŻNE LINKI:</h1><br><h1 align="left">www.men.gov.pl<br>www.ore.gov.pl<br>www.wsip.pl<br>www.dobraszkoła.pl</h1></div>
+		<div style="height:88%;width:56.5%;float:left;text-align:center;border:3px solid black;margin:8px;margin:20px;margin-right:0px;padding:10px;">
+			<h1>O NAS:</h1><br><h1 align="left">Nasza szkoła jest najlepsza,<br>najładniejsza i najlepiej położona</div></h1>
 		</section>
 		<aside><center><h1>MENU:</h1></center></br></br><font align="left"><h1 align="left">Dla uczniów</br>Dla nauczycieli</br>Dla kandydatów</br>Dla rodziców</aside></font>
 		<footer><b>STRONA ZARZĄDZANA PRZEZ SAMORZĄD UCZNIOWSKI</footer></b>
