--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<style>
 	article
 	{
+	width:1200px;
+    height:700px;
 	border:3px solid black;
 	padding:10px;
 	font-family:arial;
@@ -13,16 +15,16 @@
 	header
 	{
 	height:18%;
-	width:99.5%;
+	width:98.5%;
 	text-align:center;
 	border:3px solid black;
-	line-height:10;
+	line-height:6.5;
 	}
 	section
 	{
 	height:60%;
-	width:64%;
-	margin-right:27px;
+	width:65%;
+	margin-right:10px;
 	margin-top:10px;
 	margin-bottom:10px;
 	border:3px solid black;
@@ -30,8 +32,8 @@
 	}
 	aside
 	{
-	height:58%;
-	width:32.5%;
+	height:56.5%;
+	width:30%;
 	float:left;
 	border:3px solid black;
 	margin-top:10px;
@@ -42,11 +44,11 @@
 	footer
 	{
 	height:15%;
-	width:99.5%;
+	width:98.5%;
 	text-align:center;
 	clear:both;
 	border:3px solid black;
-	line-height:9;
+	line-height:5;
 	}
 	selektor
 	{
@@ -58,10 +60,8 @@
 		<article>
 		<header><b>STRONA INTERNETOWA SZKOŁY</header></b>
 		<section>
-		<div style="height:88%;width:34%;float:left;text-align:center;border:3px solid black;margin:8px;margin:20px;margin-right:0px;padding:10px;">
-			<h1>WAŻNE LINKI:</h1><br><h1 align="left">www.men.gov.pl<br>www.ore.gov.pl<br>www.wsip.pl<br>www.dobraszkoła.pl</h1></div>
-		<div style="height:88%;width:56.5%;float:left;text-align:center;border:3px solid black;margin:8px;margin:20px;margin-right:0px;padding:10px;">
-			<h1>O NAS:</h1><br><h1 align="left">Nasza szkoła jest najlepsza,<br>najładniejsza i najlepiej położona</div></h1>
+		<div style="height:93%;width:32%;float:left;text-align:center;border:3px solid black;margin:8px;padding-left:10px;"><h1>WAŻNE LINKI:</h1><br><h1 align="left">www.men.gov.pl<br>www.ore.gov.pl<br>www.wsip.pl<br>www.dobraszkoła.pl</h1></div>
+		<div style="height:93%;width:57%;float:left;text-align:center;border:3px solid black;margin:8px;padding-left:10px;"><h1>O NAS:</h1><br><h1 align="left">Nasza szkoła jest najlepsza,<br>najładniejsza i najlepiej położona</div></h1>
 		</section>
 		<aside><center><h1>MENU:</h1></center></br></br><font align="left"><h1 align="left">Dla uczniów</br>Dla nauczycieli</br>Dla kandydatów</br>Dla rodziców</aside></font>
 		<footer><b>STRONA ZARZĄDZANA PRZEZ SAMORZĄD UCZNIOWSKI</footer></b>
